--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,7 @@
+# config/packages/twig.yaml
 twig:
     default_path: '%kernel.project_dir%/templates'
+    paths:
+        '%kernel.project_dir%/public/assets/img': images
+        '%kernel.project_dir%/public/assets/css': css
+
